[package]
name = "crossbeam-intrusion"
# When publishing a new version:
# - Update CHANGELOG.md
# - Update README.md (when increasing major or minor version)
# - Run './tools/publish.sh crossbeam-deque <version>'
version = "0.1.0"
edition = "2021"
# rust-version = "1.61"
license = "MIT OR Apache-2.0"
repository = "https://github.com/conradludgate/crossbeam-intrusion"
homepage = "https://github.com/conradludgate/crossbeam-intrusion"
description = "Concurrent work-stealing deque with intrusive linked lists"
keywords = ["chase-lev", "lock-free", "scheduler", "scheduling"]
categories = ["algorithms", "concurrency", "data-structures"]

[features]
default = ["std"]

# Enable to use APIs that require `std`.
# This is enabled by default.
#
# NOTE: Disabling `std` feature is not supported yet.
std = ["crossbeam-epoch/std", "crossbeam-utils/std"]

[dependencies]
pin-queue = { git = "https://github.com/conradludgate/pin-queue" }
crossbeam-epoch = { version = "0.9.18", default-features = false }
crossbeam-utils = { version = "0.8.19", default-features = false }

[dev-dependencies]
rand = "0.8"
pin-project-lite = "0.2"
